--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,31 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #fff;
+  --color-primary-hover: #f5f5f5;
+
+  --color-accent: #f67442;
+  --color-accent-hover: #e56535;
+
+  --color-foreground: oklch(0.141 0.005 285.823);
+
+  --color-muted: #f5f5f5;
+  --color-muted-hover: #e5e5e5;
+
+  --color-border: #e5e5e7;
+}
+
+.dark {
+  --color-primary: #09090b;
+  --color-primary-hover: #18181b;
+
+  --color-accent: #f67442;
+  --color-accent-hover: #ff8558;
+
+  --color-foreground: oklch(0.985 0 0);
+
+  --color-muted: #18181b;
+  --color-muted-hover: #27272a;
+
+  --color-border: #27272a;
+}
